feat: crud movies

--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -5,6 +5,7 @@
     <title>Title</title>
 </head>
 <body>
-
+    <h1>Projeto My Movies</h1>
+    <p>Relação dos nossos serviços</p>
 </body>
 </html>
